fixed projects view overflow, added images.

--- a/app/src/components/Pages/page.css
+++ b/app/src/components/Pages/page.css
@@ -6,6 +6,7 @@
     flex-direction: column;
     height: 100%;
     width: 100%;
+    max-height: 100vh;
     /* border: 2px solid #eda86e; */
 }
 .page-title{
@@ -27,6 +28,7 @@
     text-align: center;
     height: 100%;
     width: 100%;
+    overflow-y: scroll;
 }
 
 .project-view {
